[project]
name = "peptides-mldata"
version = "0.1.0"
description = "Clean peptide sequence and binding site extraction for ML training."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "numpy>=2.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["peptides_mldata"]
